tests/sksl/errors/ModifiersInStruct.glsl
### Compilation failed:

error: 2: modifier 'const' is not permitted on a struct field
error: 3: modifier 'uniform' is not permitted on a struct field
error: 4: modifier 'flat' is not permitted on a struct field
error: 5: modifier 'noperspective' is not permitted on a struct field
error: 6: modifier 'varying inout' is not permitted on a struct field
5 errors
